Changed dropdown structure and updating about.css

--- a/Final_Project - CataWard/contact.html
+++ b/Final_Project - CataWard/contact.html
@@ -17,13 +17,16 @@
         <nav>
             <ul>
                 <li class="dropdown">
-                    <label class="topics">Disasters</label>
-                    <div class="dropdown-menu">
-                        <a href="contents/Typhoon.html">Typhoon</a>
-                        <a href="contents/Flood.html">Flood</a>
-                        <a href="contents/Earthquake.html">Earthquake</a>
-                        <a href="contents/Landslide.html">Landslide</a>
-                        <a href="contents/Tsunami.html">Tsunami</a>
+                    <div class="dropdown-toggle">
+                        <label class="topics" for="dropdown-toggle">Disasters</label>
+                        <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
+                        <div class="dropdown-menu">
+                            <a href="contents/Typhoon.html">Typhoon</a>
+                            <a href="contents/Flood.html">Flood</a>
+                            <a href="contents/Earthquake.html">Earthquake</a>
+                            <a href="contents/Landslide.html">Landslide</a>
+                            <a href="contents/Tsunami.html">Tsunami</a>
+                        </div>
                     </div>
                 </li>
 
