--- a/Final_Project - CataWard/contents/Tsunami.html
+++ b/Final_Project - CataWard/contents/Tsunami.html
@@ -16,13 +16,16 @@
         <nav>
             <ul>
                 <li class="dropdown">
-                    <label class="topics">Disasters</label>
-                    <div class="dropdown-menu">
-                        <a href="Typhoon.html">Typhoon</a>
-                        <a href="Flood.html">Flood</a>
-                        <a href="Earthquake.html">Earthquake</a>
-                        <a href="Landslide.html">Landslide</a>
-                        <a href="Tsunami.html">Tsunami</a>
+                    <div class="dropdown-toggle">
+                        <label class="topics" for="dropdown-toggle">Disasters</label>
+                        <span class="dropdown-arrow"><i class="fas fa-chevron-down fa-sm"></i></span>
+                        <div class="dropdown-menu">
+                            <a href="Typhoon.html">Typhoon</a>
+                            <a href="Flood.html">Flood</a>
+                            <a href="Earthquake.html">Earthquake</a>
+                            <a href="Landslide.html">Landslide</a>
+                            <a href="Tsunami.html">Tsunami</a>
+                        </div>
                     </div>
                 </li>
 
