added css and images to assets

--- a/Final_Project - CataWard/contents/Earthquake.html
+++ b/Final_Project - CataWard/contents/Earthquake.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="../assets/images/CataWard_Icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
+    <link rel="stylesheet" href="../assets/styles/earthquake.css">
     <title>Earthquake | CataWard</title>
 </head>
 
@@ -35,49 +36,65 @@
         </nav>
     </header>
 
+    <section class="image-section">
+        <img src="../assets/images/Earthquake.jpg" alt="image">
+    </section>
+
     <main>
-        <h1>How to Survive an Earthquake</h1>
-        <p>Earthquakes can strike suddenly, especially in quake-prone regions. Stay alert by monitoring seismic activity and knowing your local geography.
-             Prepare a basic emergency kit with essentials like water and first aid. 
-             In the event of an earthquake warning, find a safe place, take cover, and prioritize your safety. Stay informed, stay ready!</p>
-        <img src="../assets/images/Earthquake.jpg" alt="Earthquake">
+        <div class="content-container">
+            <h1>What are Earthquakes?</h1>
+            <p>An earthquake is a sudden and violent shaking of the Earth's surface caused by movements in the planet's crust. This movement releases energy 
+                that propagates as seismic waves, resulting in ground shaking that can vary in intensity and duration. Earthquakes can pose significant threats
+                 to human safety and infrastructure, leading to building collapses, landslides, tsunamis, and other secondary hazards. Preparedness measures, 
+                 including education, building resilience, and emergency planning, are essential for minimizing the impact of earthquakes and ensuring the safety
+                  and well-being of communities in affected regions.</p>
 
-        <h2>Earthquake Preparedness</h2>
-        <ul>
-            <li>&#10004; Drop</li>
-            <li>&#10004; Cover</li>
-            <li>&#10004; Hold me</li>
-        </ul>
+            <h2>How to Survive an Earthquake</h2>
+            <p>Earthquakes can strike suddenly, especially in quake-prone regions. Stay alert by monitoring seismic activity and knowing your local geography.
+                Prepare a basic emergency kit with essentials like water and first aid. 
+                In the event of an earthquake warning, find a safe place, take cover, and prioritize your safety. Stay informed, stay ready!</p>
 
-        <h2>How to Prepare for an Earthquake</h2>
+            <h2>Earthquake Preparedness</h2>
+            <ul>
+                <li>&#10004; Drop</li>
+                <li>&#10004; Cover</li>
+                <li>&#10004; Hold me</li>
+            </ul>
 
-        <p>Consider these steps before, during, and after an Earthquake:</p>
+            <h2>How to Prepare for an Earthquake</h2>
 
-        <h3>Before an Earthquake</h3>
-        <ul>
-            <li>Investigate the availability of earthquake early-warning systems in your area, recognizing their potential as a precautionary measure.</li>
-            <li>Evaluate your surroundings by identifying objects that could fall and cause harm during shaking.
-                 Imagine your space being shaken in various directions and take precautions with items such as televisions, shelves, mirrors, pictures, water heaters, refrigerators, and bookcases.</li>
-            <li>If you reside in an earthquake-prone region, consider having your building assessed and explore structural improvements to enhance overall safety.</li>
-            <li>Ensure you have essential emergency provisions readily available, including food, medication, flashlights, whistle, radios, water, and first aid kits.</li>
-        </ul>
+            <p>Consider these steps before, during, and after an Earthquake:</p>
 
-        <h3>During an Earthquake</h3>
-        <ul>
-            <li>Safeguard yourself by shielding your head and neck your hands or with a pillow during the earthquake.</li>
-            <li>If you find yourself outdoors, drop to the ground, then crawl to open space if possible. Steer clear of buildings, power lines, and trees for safety.</li>
-            <li>If driving, halt and remain inside your vehicle. Avoid stopping near buildings, trees, overpasses, and utility wires.
-                 Exercise caution when resuming travel once the earthquake subsides, steering clear of bridges or ramps.</li>
-        </ul>
 
-        <h3>After an Earthquake</h3>
-        <ul>
-            <li>Take a moment before standing up after the earthquake. Assess your surroundings for immediate dangers and ensure your protection.</li>
-            <li>Be cautious of broken glass and debris on the ground, so promptly wear sturdy shoes.</li>
-            <li>For those near the coast, be aware of the potential for a tsunami following the earthquake. 
-                When the shaking subsides, move swiftly to safety by climbing to higher ground or inland away from the coast. Don't wait for official warnings.</li>
-            <li>If trapped, shield your mouth, nose, and eyes from airborne debris. Use a cloth, clothing, or a dust mask to cover your mouth and nose.</li>
-        </ul>
+            <img src="../assets/images/before_earthquake.jpg" alt="image">
+            <h3>Before an Earthquake</h3>
+            <ul>
+                <li>Investigate the availability of earthquake early-warning systems in your area, recognizing their potential as a precautionary measure.</li>
+                <li>Evaluate your surroundings by identifying objects that could fall and cause harm during shaking.
+                    Imagine your space being shaken in various directions and take precautions with items such as televisions, shelves, mirrors, pictures, water heaters, refrigerators, and bookcases.</li>
+                <li>If you reside in an earthquake-prone region, consider having your building assessed and explore structural improvements to enhance overall safety.</li>
+                <li>Ensure you have essential emergency provisions readily available, including food, medication, flashlights, whistle, radios, water, and first aid kits.</li>
+            </ul>
+            
+            <img src="../assets/images/during_earthquake.jpg" alt="image">
+            <h3>During an Earthquake</h3>
+            <ul>
+                <li>Safeguard yourself by shielding your head and neck your hands or with a pillow during the earthquake.</li>
+                <li>If you find yourself outdoors, drop to the ground, then crawl to open space if possible. Steer clear of buildings, power lines, and trees for safety.</li>
+                <li>If driving, halt and remain inside your vehicle. Avoid stopping near buildings, trees, overpasses, and utility wires.
+                    Exercise caution when resuming travel once the earthquake subsides, steering clear of bridges or ramps.</li>
+            </ul>
+
+            <img src="../assets/images/after_earthquake.jpg" alt="image">
+            <h3>After an Earthquake</h3>
+            <ul>
+                <li>Take a moment before standing up after the earthquake. Assess your surroundings for immediate dangers and ensure your protection.</li>
+                <li>Be cautious of broken glass and debris on the ground, so promptly wear sturdy shoes.</li>
+                <li>For those near the coast, be aware of the potential for a tsunami following the earthquake. 
+                    When the shaking subsides, move swiftly to safety by climbing to higher ground or inland away from the coast. Don't wait for official warnings.</li>
+                <li>If trapped, shield your mouth, nose, and eyes from airborne debris. Use a cloth, clothing, or a dust mask to cover your mouth and nose.</li>
+            </ul>
+        </div>
     </main>
 
     <footer>
