--- a/Final_Project - CataWard/index.html
+++ b/Final_Project - CataWard/index.html
@@ -57,6 +57,7 @@
                 Explore our resources to empower yourself in the face of unforeseen events. Stay informed, stay
                 vigilant, and stay safe.
             </p>
+        </div>
 
     </section>
 
