--- a/Final_Project - CataWard/contents/Flood.html
+++ b/Final_Project - CataWard/contents/Flood.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="../assets/images/CataWard_Icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
+    <link rel="stylesheet" href="../assets/styles/flood.css">
     <title>Flood | CataWard</title>
 </head>
 
@@ -34,40 +35,52 @@
             </ul>
         </nav>
     </header>
+    
+    <section class="image-section">
+        <img src="../assets/images/flood1.jpg" alt="image">
+    </section>
+
     <main>
-        <h1>How to Survive a Flood?</h1>
-        <p>To survive a flood, escape to higher land as soon as you are advised or see rising water levels. Avoid
-            walking or
-            driving through flooded regions, since they may conceal hazards. During the flood disaster, be informed by
-            following official channels for updates and directions.</p>
-        <img src="../assets/images/Flood.jpeg" alt="FloodPH">
+        <div class="content-container">
+            <h1>What is Flood?</h1>
+            <p>A flood is an overflow of water that submerges land that is usually dry. Floods can result from various causes, including heavy rainfall, river overflow, dam breaks, rapid snowmelt, or coastal storm surges. They can cause significant damage to property, infrastructure, and can pose serious risks to human safety.</p>
+            <h1>How to Survive a Flood?</h1>
+            <p>To survive a flood, escape to higher land as soon as you are advised or see rising water levels. Avoid
+                walking or
+                driving through flooded regions, since they may conceal hazards. During the flood disaster, be informed by
+                following official channels for updates and directions.</p>
+            <img src="../assets/images/Flood.jpeg" alt="FloodPH">
 
-        <h2>How to Prepare for a Flood?</h2>
-        <p>Consider these steps before, during, and after a Flood:</p>
+            <h2>How to Prepare for a Flood?</h2>
+            <p>Consider these steps before, during, and after a Flood:</p>
+            
+            <img src="../assets/images/beforeflood.png" alt="FloodPH">
+            <h3>Before a Flood</h3>
+            <ul>
+                <li>Stay informed by using trusted sources.</li>
+                <li>Create a flood emergency plan, including evacuation routes.</li>
+                <li>Create an emergency kit including necessary materials.</li>
+                <li>Elevating appliances and putting up obstacles will help to secure your property.</li>
+            </ul>
 
-        <h3>Before a Flood</h3>
-        <ul>
-            <li>Stay informed by using trusted sources.</li>
-            <li>Create a flood emergency plan, including evacuation routes.</li>
-            <li>Create an emergency kit including necessary materials.</li>
-            <li>Elevating appliances and putting up obstacles will help to secure your property.</li>
-        </ul>
+            <img src="../assets/images/duringflood.png" alt="FloodPH">
+            <h3>During a Flood</h3>
+            <ul>
+                <li>Evacuation orders should be followed swiftly.</li>
+                <li>Move to higher ground or upper levels if required.</li>
+                <li>Avoid floodwaters, since they might be dangerous.</li>
+                <li>Stay informed with local news and notifications.</li>
+            </ul>
 
-        <h3>During a Flood</h3>
-        <ul>
-            <li>Evacuation orders should be followed swiftly.</li>
-            <li>Move to higher ground or upper levels if required.</li>
-            <li>Avoid floodwaters, since they might be dangerous.</li>
-            <li>Stay informed with local news and notifications.</li>
-        </ul>
-
-        <h3>After a Flood</h3>
-        <ul>
-            <li>Wait until officials declare it safe to return.</li>
-            <li>Inspect the property for damage and document it.</li>
-            <li>Be wary of risks such as downed electrical wires.</li>
-            <li>Contact your insurance provider and begin the cleanup process safely.</li>
-        </ul>
+            <img src="../assets/images/afterflood.jpg" alt="FloodPH">
+            <h3>After a Flood</h3>
+            <ul>
+                <li>Wait until officials declare it safe to return.</li>
+                <li>Inspect the property for damage and document it.</li>
+                <li>Be wary of risks such as downed electrical wires.</li>
+                <li>Contact your insurance provider and begin the cleanup process safely.</li>
+            </ul>
+        </div>
     </main>
 
     <footer>
