--- a/Final_Project - CataWard/contents/Tsunami.html
+++ b/Final_Project - CataWard/contents/Tsunami.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="../assets/images/CataWard_Icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../assets/styles/main.css">
+    <link rel="stylesheet" href="../assets/styles/Tsunami.css">
     <title>Tsunami | CataWard</title>
 </head>
 
@@ -35,53 +36,56 @@
         </nav>
     </header>
 
+    <section class="image-section">
+        <img src="../assets/images/Tsunami.png" alt="Tsunami image">
+    </section>
+
     <main>
-        <h1>How to Survive a Tsunami</h1>
-        <p>A tsunami is a series of potent and perilous waves that are usually caused by earthquakes and underwater
-            disturbances. If your home is in a place where earthquakes often occur, it's important to know what to do
-            when a
-            Tsunami shows up. Don't worry, We got you covered!</p>
-        <img src="../assets/images/Tsunami.png" alt="Tsunami Waves">
+        <div class="content-container">
+            <h1>How to Survive a Tsunami</h1>
+            <p>A tsunami is a series of potent and perilous waves that are usually caused by earthquakes and underwater disturbances. If your home is in a place where earthquakes often occur, it's important to know what to do when a Tsunami shows up. Don't worry, We got you covered!</p>
 
-        <h2>Tsunami Preparedness</h2>
-        <p>Be Tsunami Smart: Recognize the natural signs</p>
-        <ul>
-            <li>&#10004; Feel</li>
-            <li>&#10004; See</li>
-            <li>&#10004; Hear</li>
-        </ul>
-        <h2>How to Prepare for a Tsunami</h2>
+            <h2>Tsunami Preparedness</h2>
+            <p>Be Tsunami Smart: Recognize the natural signs</p>
+            <ul>
+                <li>&#10004; Feel</li>
+                <li>&#10004; See</li>
+                <li>&#10004; Hear</li>
+            </ul>
 
-        <p>Consider these steps before, during, and after a tsunami:</p>
+            <h2>How to Prepare for a Tsunami</h2>
+            <p>Consider these steps before, during, and after a tsunami:</p>
 
-        <h3>Before a Tsunami</h3>
-        <ul>
-            <li>Determine if your home is in a vulnerable zone near the coastline.</li>
-            <li>Know the quickest route to higher ground if you live near the beach or in low-lying areas.</li>
-            <li>Ensure everyone in your family knows how to recognize tsunami signs.</li>
-            <li>Keep emergency supplies like food, medicine, flashlights, radios, water, and first aid kits ready.</li>
-        </ul>
+            <img src="../assets/images/before_tsunami.png" alt="Before Tsunami">
+            <h3>Before a Tsunami</h3>
+            <ul>
+                <li>Determine if your home is in a vulnerable zone near the coastline.</li>
+                <li>Know the quickest route to higher ground if you live near the beach or in low-lying areas.</li>
+                <li>Ensure everyone in your family knows how to recognize tsunami signs.</li>
+                <li>Keep emergency supplies like food, medicine, flashlights, radios, water, and first aid kits ready.</li>
+            </ul>
 
-        <h3>During a Tsunami</h3>
-        <ul>
-            <li>If in a tsunami-prone area during an earthquake, prioritize personal safety by dropping, covering, and
-                holding onto sturdy furniture.</li>
-            <li>Move to higher ground immediately upon noticing natural signs or receiving official warnings.</li>
-            <li>Stay put if outside the tsunami zone and warned, but leave promptly if instructed.</li>
-            <li>If in water, grab onto floating objects like rafts or tree trunks.</li>
-            <li>In a boat, face the waves and sail away from the coast; in a harbor, head inland.</li>
-        </ul>
+            <img src="../assets/images/during_tsunami.png" alt="During Tsunami">
+            <h3>During a Tsunami</h3>
+            <ul>
+                <li>If in a tsunami-prone area during an earthquake, prioritize personal safety by dropping, covering, and holding onto sturdy furniture.</li>
+                <li>Move to higher ground immediately upon noticing natural signs or receiving official warnings.</li>
+                <li>Stay put if outside the tsunami zone and warned, but leave promptly if instructed.</li>
+                <li>If in water, grab onto floating objects like rafts or tree trunks.</li>
+                <li>In a boat, face the waves and sail away from the coast; in a harbor, head inland.</li>
+            </ul>
 
-        <h3>After a Tsunami</h3>
-        <ul>
-            <li>Listen to local alerts and obey authorities' instructions regarding safe areas and shelter locations.
-            </li>
-            <li>Reserve phone calls for emergencies and use text messages or social media for communication.</li>
-            <li>Avoid walking through floodwater, which may contain hazardous debris and be deeper than it appears.</li>
-            <li>Beware of electrocution risks from fallen power lines; avoid touching wet electrical equipment.</li>
-            <li>Avoid damaged buildings, roads, and bridges.</li>
-            <li>If injured, contact healthcare providers and seek shelter; call 9-1-1 for emergencies.</li>
-        </ul>
+            <img src="../assets/images/after_tsunami.png" alt="After Tsunami">
+            <h3>After a Tsunami</h3>
+            <ul>
+                <li>Listen to local alerts and obey authorities' instructions regarding safe areas and shelter locations.</li>
+                <li>Reserve phone calls for emergencies and use text messages or social media for communication.</li>
+                <li>Avoid walking through floodwater, which may contain hazardous debris and be deeper than it appears.</li>
+                <li>Beware of electrocution risks from fallen power lines; avoid touching wet electrical equipment.</li>
+                <li>Avoid damaged buildings, roads, and bridges.</li>
+                <li>If injured, contact healthcare providers and seek shelter; call 9-1-1 for emergencies.</li>
+            </ul>
+        </div>
     </main>
 
     <footer>
@@ -91,7 +95,7 @@
                 <ul>
                     <li>Emergency Hotline - #911</li>
                     <li>Red Cross: #143</li>
-                    <li>National Complaint Hotline: #8888 </p></li>
+                    <li>National Complaint Hotline: #8888</li>
                 </ul>
             </div>
             <div class="footer-section">
